--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,6 @@ license-file = "LICENSE"
 edition = "2018"
 
 [build-dependencies]
-bindgen = "0.54.1"
+bindgen = ">= 0.49.0, < 1.0.0"
 
 [dependencies]
